--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -33,7 +33,7 @@
     </nav>
     <!--nav-end-->
     <!--==Latest-Movies==================================-->
-    <section id="latest">
+    <section id="latest" class="movie-post">
         <!--heading-------->
         <div class="latest-heading">
             <h1><strong> {{genre}} </strong></h1>
