--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -124,7 +124,7 @@
     </section>
 
     <!--== Recommended-Movies =========================================-->
-    <section id="latest">
+    <section id="latest" class="movie-post">
         <!--heading-------->
         <div class="latest-heading" style="text-align: center;">
             <h1>You may also like</h1>
