--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
     </nav>
     <!--nav-end-->
     <!--==slider============================================-->
-    <section id="main-slider">
+    <section id="main-slider" class="movie-post">
         <!-- Swiper -->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
@@ -101,7 +101,7 @@
     </div>
     <!--slider-end-------->
     <!--==Latest-Movies==================================-->
-    <section id="latest">
+    <section id="latest" class="movie-post">
         <!--heading-------->
         <div class="latest-heading">
             <h1>Latest Movies</h1>
