--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,6 @@
 <title>
     MovieFusion
 </title>
-<style>
-
-</style>
 
 <body>
     <!--==Scroll-Progress-bar=========================-->
@@ -92,131 +89,160 @@
                 </div>
                 {% endfor %}
             </div>
+            <!--btns-------------------->
+            <div class="slider-btns">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
         </div>
     </section>
-    <!--btns-------------------->
-    <div class="slider-btns">
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-    </div>
     <!--slider-end-------->
-    <!--==Your-Watch-Histroy==================================-->
+
     {% if visited_movie %}
     <section id="latest" class="movie-post">
         <!--heading-------->
         <div class="latest-heading">
-            <h1>Continue Watching</h1>
+            <h1>Continue Watching!</h1>
         </div>
-        <!--container------->
-        <div class="post-container">
-            {% for movie in visited_movie %}
-            <div class="movie-poster">
-                <div class="post-box">
-                    <!--img-->
-                    <div class="post-img">
-                        <img alt="" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
-                    </div>
-                    <!--text---------->
-                    <div class="main-slider-text">
-                        <!--quality----->
-                        <span class="quality">Full HD</span>
-                        <!--bottom-text-->
-                        <div class="bottom-text">
-                            <!--name----->
-                            <div class="movie-name">
-                                <span>{{ movie.get('release_date',"")[:4] }}</span>
-                                <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
-                                    {{movie['title']}}
-                                </a>
-                            </div>
-                            <!--Category-and-rating---->
-                            <div class="category-rating">
-                                <!--category-->
-                                <div class="category">
-                                    {% if movie.get('genres') %}
-                                    {% for genre in movie['genres']%}
-                                    <a href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{
-                                        genre['name']
-                                        }}</a>
-                                    {% endfor %}
-                                    {% endif %}
+    </section>
+    <section id="main-slider" class="movie-post">
+        <!-- Swiper -->
+        <div class="swiper mySwiper1">
+            <div class="swiper-wrapper">
+                {% for movie in visited_movie %}
+                <div class="swiper-slide">
+                    <!--box------------------->
+                    <div class="main-slider-box">
+                        <!--overlayer-------->
+                        <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
+                            class="main-slider-overlay">
+                            <i class="fas fa-play"></i>
+                        </a>
+                        <!--img----------->
+                        <div class="main-slider-img">
+                            <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
+                        </div>
+                        <!--text---------->
+                        <div class="main-slider-text">
+                            <!--quality----->
+                            <span class="quality">Full HD</span>
+                            <!--bottom-text-->
+                            <div class="bottom-text">
+                                <!--name----->
+                                <div class="movie-name">
+                                    <span>{{ movie.get('release_date',"")[:4] }}</span>
+                                    <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
+                                        {{movie['title']}}
+                                    </a>
                                 </div>
-                                <!--rating--->
-                                <div class="rating">
-                                    {{ '%.1f' % movie['vote_average'] }}
-                                    <img alt="tmbd"
-                                        src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
+                                <!--Category-and-rating---->
+                                <div class="category-rating">
+                                    <!--category-->
+                                    <div class="category">
+                                        <strong>Category</strong><br />
+                                        {% if movie.get('genres') %}
+                                        {% for genre in movie['genres']%}
+                                        <a href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{
+                                            genre['name']
+                                            }}</a>
+                                        {% endfor %}
+                                        {% endif %}
+                                    </div>
+                                    <!--rating--->
+                                    <div class="rating">
+                                        {{ '%.1f' % movie['vote_average'] }}
+                                        <img alt="tmbd"
+                                            src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
+            <!--btns-------------------->
+            <div class="slider-btns">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
         </div>
-        <!--container-end--->
     </section>
+    <!--slider-end-------->
     {% endif %}
-    <!--Your-Watch-History-end------->
 
-    <!--==Because-You-Watched==================================-->
     {% if watched_title %}
     <section id="latest" class="movie-post">
         <!--heading-------->
         <div class="latest-heading">
             <h1>Because you watched {{watched_title}}</h1>
         </div>
-        <!--container------->
-        <div class="post-container">
-            {% for movie in because_you_watch %}
-            <div class="movie-poster">
-                <div class="post-box">
-                    <!--img-->
-                    <div class="post-img">
-                        <img alt="" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
-                    </div>
-                    <!--text---------->
-                    <div class="main-slider-text">
-                        <!--quality----->
-                        <span class="quality">Full HD</span>
-                        <!--bottom-text-->
-                        <div class="bottom-text">
-                            <!--name----->
-                            <div class="movie-name">
-                                <span>{{ movie.get('release_date',"")[:4] }}</span>
-                                <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
-                                    {{movie['title']}}
-                                </a>
-                            </div>
-                            <!--Category-and-rating---->
-                            <div class="category-rating">
-                                <!--category-->
-                                <div class="category">
-                                    {% if movie.get('genres') %}
-                                    {% for genre in movie['genres']%}
-                                    <a href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{
-                                        genre['name']
-                                        }}</a>
-                                    {% endfor %}
-                                    {% endif %}
+    </section>
+    <section id="main-slider" class="movie-post">
+        <!-- Swiper -->
+        <div class="swiper mySwiper1">
+            <div class="swiper-wrapper">
+                {% for movie in because_you_watch %}
+                <div class="swiper-slide">
+                    <!--box------------------->
+                    <div class="main-slider-box">
+                        <!--overlayer-------->
+                        <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
+                            class="main-slider-overlay">
+                            <i class="fas fa-play"></i>
+                        </a>
+                        <!--img----------->
+                        <div class="main-slider-img">
+                            <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
+                        </div>
+                        <!--text---------->
+                        <div class="main-slider-text">
+                            <!--quality----->
+                            <span class="quality">Full HD</span>
+                            <!--bottom-text-->
+                            <div class="bottom-text">
+                                <!--name----->
+                                <div class="movie-name">
+                                    <span>{{ movie.get('release_date',"")[:4] }}</span>
+                                    <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
+                                        {{movie['title']}}
+                                    </a>
                                 </div>
-                                <!--rating--->
-                                <div class="rating">
-                                    {{ '%.1f' % movie['vote_average'] }}
-                                    <img alt="tmbd"
-                                        src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
+                                <!--Category-and-rating---->
+                                <div class="category-rating">
+                                    <!--category-->
+                                    <div class="category">
+                                        <strong>Category</strong><br />
+                                        {% if movie.get('genres') %}
+                                        {% for genre in movie['genres']%}
+                                        <a href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{
+                                            genre['name']
+                                            }}</a>
+                                        {% endfor %}
+                                        {% endif %}
+                                    </div>
+                                    <!--rating--->
+                                    <div class="rating">
+                                        {{ '%.1f' % movie['vote_average'] }}
+                                        <img alt="tmbd"
+                                            src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
+            <!--btns-------------------->
+            <div class="slider-btns">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
         </div>
-        <!--container-end--->
     </section>
+    <!--slider-end-------->
     {% endif %}
-    <!--Because-You-Watched-end------->
 
     <!--==Latest-Movies==================================-->
     <section id="latest" class="movie-post">
@@ -282,6 +308,8 @@
         </div>
     </section>
     <!--latest-post-end------->
+
+
     <!--==footer==============================-->
     <footer>
         <!--footer-logo--->
@@ -375,6 +403,39 @@
                 event.preventDefault();
                 submitSearch();
             }
+        });
+    </script>
+    <script>
+        /*Initialize Swiper*/
+        var swiper = new Swiper(".mySwiper1", {
+            slidesPerView: 1,
+            spaceBetween: 10,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            autoplay: {
+                delay: 500000,
+                disableOnInteraction: false,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+            breakpoints: {
+                640: {
+                    slidesPerView: 3,
+                    spaceBetween: 20,
+                },
+                768: {
+                    slidesPerView: 3,
+                    spaceBetween: 40,
+                },
+                1024: {
+                    slidesPerView: 4,
+                    spaceBetween: 50,
+                },
+            },
         });
     </script>
 </body>
