Update movie.html and index.html to include movie-poster class

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -430,6 +430,7 @@ body {
 /* Title positioning */
 .movie-poster .movie-name a {
     top: 70%;
+    padding-right: 5%;
     white-space: normal;
 }
 
