--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,7 +51,7 @@
                             <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
                         </div>
                         <!--text---------->
-                        <div class="main-slider-text">
+                        <div class="main-slider-text movie-poster">
                             <!--quality----->
                             <span class="quality">Full HD</span>
                             <!--bottom-text-->
@@ -123,7 +123,7 @@
                             <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
                         </div>
                         <!--text---------->
-                        <div class="main-slider-text">
+                        <div class="main-slider-text movie-poster">
                             <!--quality----->
                             <span class="quality">Full HD</span>
                             <!--bottom-text-->
@@ -196,7 +196,7 @@
                             <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
                         </div>
                         <!--text---------->
-                        <div class="main-slider-text">
+                        <div class="main-slider-text movie-poster">
                             <!--quality----->
                             <span class="quality">Full HD</span>
                             <!--bottom-text-->
@@ -298,14 +298,6 @@
             {% endfor %}
         </div>
         <!--container-end--->
-        <!--page-number=====================-->
-        <div class="page-number">
-            <a href="#" class="page-active">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            ....
-            <a href="#">100</a>
-        </div>
     </section>
     <!--latest-post-end------->
 
