--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,33 +1,41 @@
-{% include 'layout.html' %}
-<title>Login</title>
+<head>
+    <title>Login | MovieFusion</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/fav-icon.png') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/form_style.css') }}" />
+</head>
 
-<div class="container-fluid">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <div class="alert alert-success alert-dismissible fade show custom-alert text-center" role="alert">
-        {% for message in messages %}
-        <p class="mb-0">{{ message }}</p>
-        {% endfor %}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    {% endif %}
-    {% endwith %}
-    <form class="mx-auto" id="loginForm" action="{{ url_for('auth.login') }}" method="post">
-        <h4 class="text-center">Login</h4>
-        <div class="mb-3 mt-4">
-            <label for="exampleInputEmail1">Username</label>
-            <input type="text" name="username" class="form-control" placeholder="Your username or email">
+<body>
+    <section>
+        <section id="container"></section>
+        <div class="signin">
+            <div class="content">
+                <h2>Sign In</h2>
+                <div class="form">
+                    <form action="{{url_for('auth.login')}}" method="post">
+                        <div class="inputBox">
+                            <input type="text" required> <i>Username</i>
+                        </div>
+                        <div class="inputBox" style="margin-top: 5%;">
+                            <input type="password" required> <i>Password</i>
+                        </div>
+                        <div class="links" style="margin-top: 5%;"> <a href="#">Forgot Password</a>
+                            <a href="{{url_for('auth.register')}}">Signup</a>
+                        </div>
+                        <div class="inputBox" style="margin-top: 5%;">
+                            <input type="submit" value="Login">
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="mb-3 mt-4">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" name="password" class="form-control" placeholder="Your password">
-            <div id="emailHelp" class="form-text mt-3"><a href="{{ url_for('auth.forgot_password') }}">Forgot your
-                    password?</a></div>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-        <div class="mt-3 d-flex justify-content-between align-items-center">
-            <p class="form-text mb-0">Don't have an account?</p>
-            <a href="{{ url_for('auth.register') }}">Register</a>
-        </div>
-    </form>
-</div>
+    </section>
+    <script>
+        const numberOfSpans = 300;
+        const container = document.getElementById('container');
+        for (let i = 0; i < numberOfSpans; i++) {
+            const span = document.createElement('span');
+            container.appendChild(span);
+        }
+
+    </script>
+</body>
