Update form_style.css and login.html templates to improve sign-in section styling and hover effect

--- a/app/static/css/form_style.css
+++ b/app/static/css/form_style.css
@@ -70,8 +70,13 @@ section .signin {
     justify-content: center;
     align-items: center;
     padding: 40px;
-    border-radius: 4px;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 9);
+    border-radius: 10px;
+    box-shadow: 8px 8px 2px #e70634;
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+section .signin:hover {
+    box-shadow: 4px 3px #e70634;
 }
 
 section .signin .content {
