--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,11 @@
     MovieFusion
 </title>
 
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha384-43wU5P3E9cW3JVa/4vWX+RrMk0QYNQ+bQ1crYOhjbKjqvcE3fLlFG50C0fAW+6+J" crossorigin="anonymous">
+</head>
+
 <body>
     <!--==Scroll-Progress-bar=========================-->
 
@@ -20,6 +25,10 @@
         <!--logo------------------->
         <a href="{{url_for('main.index')}}" class="logo">
             Movie<span>Fusion</span>
+        </a>
+        <!--GitHub icon------------------->
+        <a href="https://github.com/aayushsoni4/MovieFusion" target="_blank" class="github-icon">
+            <i class="fab fa-github"></i>
         </a>
         <!--menu------------------->
         {% include 'menu.html' %}
