Update movie.html, validate_user.html, and recommendation.py

--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -66,6 +66,10 @@
                     <div class="language">
                         <span>English</span>
                     </div>
+
+                    <div class="more-about-movie" style="margin-top: 20px; padding-left:10px">
+                        {% include 'rating.html'%}
+                    </div>
                 </div>
                 <!--Title-botttom==========================-->
                 <div class="title-bottom">
