--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -68,8 +68,8 @@
                     </div>
 
                     <div class="more-about-movie" style="margin-top: 20px; padding-left:10px">
-                        {% set movie_id = movie['id'] %}
-                        {% include 'rating.html' %}
+                        {% set movie_id = movie['id'], stars = user_rating %}
+                        {% include 'rating.html' with context %}
                     </div>
                 </div>
                 <!--Title-botttom==========================-->
