Handle error for empty query.

--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -156,6 +156,9 @@
     <script type="text/javascript">
         function submitSearch() {
             var searchQuery = document.getElementById('search-input').value;
+            if (!searchQuery) {
+                return;
+            }
             var slugifiedQuery = slugify(searchQuery);
             window.location.href = '/search/' + encodeURIComponent(slugifiedQuery);
         }
