Add forgot_password and reset_password functionality

--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Login | MovieFusion</title>
+    <title>Forgot Password | MovieFusion</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/fav-icon.png') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/form_style.css') }}" />
 </head>
@@ -18,20 +18,18 @@
         <section id="container"></section>
         <div class="signin">
             <div class="content">
-                <h2>Sign In</h2>
+                <h2>Forgot Password</h2>
                 <div class="form">
-                    <form action="{{url_for('auth.login')}}" method="post">
+                    <form action="{{url_for('auth.forgot_password')}}" method="post">
                         <div class="inputBox">
-                            <input type="text" name="username" required> <i>Username</i>
+                            <input type="email" name="email" required> <i>Email</i>
+                        </div>
+                        <div class="links" style="margin-top: 5%;">
+                            <p>Remember Your Password?</p>
+                            <a href="{{url_for('auth.login')}}">Log In</a>
                         </div>
                         <div class="inputBox" style="margin-top: 5%;">
-                            <input type="password" name="password" required> <i>Password</i>
-                        </div>
-                        <div class="links" style="margin-top: 5%;"> <a href="#">Forgot Password</a>
-                            <a href="{{url_for('auth.register')}}">Sign Up</a>
-                        </div>
-                        <div class="inputBox" style="margin-top: 5%;">
-                            <input type="submit" value="Login">
+                            <input type="submit" value="Reset Password">
                         </div>
                     </form>
                 </div>
