--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,8 +27,8 @@
                         <div class="inputBox" style="margin-top: 5%;">
                             <input type="password" name="password" required> <i>Password</i>
                         </div>
-                        <div class="links" style="margin-top: 5%;"> <a href="{{url_for('auth.forgot_password')}}">Forgot
-                                Password</a>
+                        <div class="links" style="margin-top: 5%;">
+                            <a href="{{url_for('auth.forgot_password')}}">Forgot Password</a>
                             <a href="{{url_for('auth.register')}}">Sign Up</a>
                         </div>
                         <div class="inputBox" style="margin-top: 5%;">
