Update login, forgot password, reset password, and register templates to use nested auth folder structure

--- a/app/templates/auth/forgot_password.html
+++ b/app/templates/auth/forgot_password.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="links" style="margin-top: 5%;">
                             <p>Remember Your Password?</p>
-                            <a href="{{url_for('auth.login')}}">Log In</a>
+                            <a href="{{url_for('auth.login')}}">Sign In</a>
                         </div>
                         <div class="inputBox" style="margin-top: 5%;">
                             <input type="submit" value="Reset Password">
