Update form_style.css to improve link styling and hover effect

--- a/app/static/css/form_style.css
+++ b/app/static/css/form_style.css
@@ -146,6 +146,14 @@ section .signin .content .form .inputBox i {
 
 .signin .content .form .links a {
     color: #dedcdc;
+    font-weight: 500;
+    text-decoration: none;
+    transition: 0.1s;
+}
+
+.signin .content .form .links a:hover {
+    color: #e70634;
+    font-weight: 500;
     text-decoration: none;
 }
 
