--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -32,7 +32,7 @@
             </div>
             <div class="links" style="margin-top: 5%">
               <a href="{{ url_for('auth.forgot_password') }}"
-                >Forgot Password</a
+                >Forgot Password?</a
               >
               <a href="{{ url_for('auth.register') }}">Sign Up</a>
             </div>
