Add min width of the movie poster

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -419,6 +419,10 @@ body {
     transition: all ease 0.3s;
 }
 
+.swiper-slide{
+    min-width: 250px;
+}
+
 /* Year, title, and genres styles */
 .movie-poster .movie-name span,
 .movie-poster .movie-name a,
