Update movie.py, index.html, recommendation.py, and visited.py to use movie_id as an integer instead of converting it from a float

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -212,7 +212,7 @@
   <section id="latest" class="movie-post">
     <!--heading-------->
     <div class="latest-heading">
-      <h1>Because you watched {{ watched_title }}</h1>
+      <h1>Because you watched <strong> {{ watched_title }} </strong></h1>
     </div>
   </section>
   <section id="main-slider" class="movie-post">
